--- a/src/views/client-library.html
+++ b/src/views/client-library.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library</title>
-    <link rel="stylesheet" href="../public/assets/css/client-library.css">
+    <link rel="stylesheet" href="/assets/css/client-library.css">
 </head>
 
 <body>
     <div class="container">
                 <div class="header">
                     <div class="item-2">
-                        <img src="../public/assets/img/img2.png" alt="" class="img-school">
+                        <img src="/assets/img/img2.png" alt="" class="img-school">
                         <form action="" method="POST" class="form" id="logout-form">
                             <input type="submit" value="Đăng xuất" id="logout" >
                         </form>
@@ -38,10 +38,10 @@
                     </div>
                 </div>
                 <div class="content">
-                    <img src="../public/assets/img/img3.jpg" alt="" class="img-library">
+                    <img src="/assets/img/img3.jpg" alt="" class="img-library">
                 </div>
     </div>
-    <script src="../public/assets/js/client-library.js">
+    <script src="/assets/js/client-library.js">
     </script>
 </body>
 
