--- a/src/public/assets/css/login.css
+++ b/src/public/assets/css/login.css
@@ -8,86 +8,96 @@ html {
     font-size: 62.5%;
     font-family: "Open Sans", sans-serif;
 }
-.main {
-    background: #f1f1f1;
-    min-height: 100vh;
+
+.container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #003C6C;
+    width: 100%;
+    height: 100%;
 }
 
-.form {
-    width: 100%;
-    min-height: 100px;
-    padding: 32px 24px;
-    text-align: center;
-    background: #003c6c;
-    border-radius: 2px;
-    margin: 24px;
-    align-self: center;
-    box-shadow: 0 2px 5px 0 rgba(51, 62, 73, 0.1);
+#login-form {
     display: flex;
 }
 
 .img-library {
-    flex-basis: 50%;
+    flex: 1;
 }
 
 .wrap-form {
-    flex-basis: 50%;
-    align-self: center;
-}
-
-.wrap-input {
-
-}
-
-.form-control {
-    height: 60px;
-    padding: 8px 12px;
-    margin: 4px 24px;
-    border: 1px solid #181717;
-    border-radius: 3px;
-    outline: none;
-    font-size: 1.4rem;
-    background: #f1f1f1;
-    max-width: 360px;
-    width: calc(100% - 48px);
-}
-
-.form-control:hover {
-    border: 3px solid #1dbfaf;
-}
-
-.wrap-submit {
-    margin: 4px 0;
     display: flex;
-    flex-wrap: nowrap;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    width: 100%;
+    flex: 1;
 }
 
-.form-submit {
+.wrap-form .wrap-input {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    height: 100%;
+    margin: 20px 0;
+    margin-left: 15%;
+    flex: 1;
+}
+
+.wrap-input .form-group {
+    width: 100%;
+    margin: 2px;
+}
+
+.form-group .form-control{
+    width: 70%;
     height: 60px;
-    padding: 8px 12px;
-    margin: 4px 4px;
-    border: 1px solid #181717;
-    border-radius: 3px;
-    outline: none;
-    font-size: 1.4rem;
-    background: #003c6c;
-    max-width: 120px;
-    width: calc((100% - 16px));
+    min-width: 200px;
+    border: 2px solid #181717;
+    border-radius: 5px;
+    background: #f1f1f1;
 }
 
-.form-submit:hover {
+.form-group .form-control:hover {
     border: 3px solid #1dbfaf;
-    cursor: pointer;
 }
 
-.form-submit-content {
-    color: #fff;
-    font-weight: 600;
-}
 
 ::placeholder {
     color: #000;
     font-weight: 600;
 }
+
+.wrap-submit {
+    flex: 1;
+    position: relative;
+    top: 0;
+    right: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.wrap-submit .form-submit {
+    position: absolute;
+    right: 0;
+    top: 0;
+    border: 2px solid #181717;
+    border-radius: 5px;
+    width: 150px;
+    height: 50px;
+    min-width: 50px;
+    background: #076abb;
+    color: #fff;
+    font-weight: 700;
+    font-size: 20px;
+}
+
+.wrap-submit .form-submit:hover {
+    cursor: pointer;
+    border: 3px solid #1dbfaf;
+}
+
+
+
+
