--- a/src/views/client-library.html
+++ b/src/views/client-library.html
@@ -6,14 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library</title>
-    <link rel="stylesheet" href="/assets/css/client-library.css">
+    <link rel="stylesheet" href="../public/assets/css/client-library.css">
+    <script src="https://unpkg.com/react@18.0.0/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
 
 <body>
     <div class="container">
                 <div class="header">
                     <div class="item-2">
-                        <img src="/assets/img/img2.png" alt="" class="img-school">
+                        <img src="../public/assets/img/img2.png" alt="" class="img-school">
                         <form action="" method="POST" class="form" id="logout-form">
                             <input type="submit" value="Đăng xuất" id="logout" >
                         </form>
@@ -22,6 +25,9 @@
                     <div class="itemList">
                         <button class="management">
                             <p>Quản lý sách</p>
+                        </button>
+                        <button class="online-borrow">
+                            <p>Phiếu mượn điện tử</p>
                         </button>
                         <button class="borrow">
                             <p>Quản lý mượn sách</p>
@@ -38,10 +44,12 @@
                     </div>
                 </div>
                 <div class="content">
-                    <img src="/assets/img/img3.jpg" alt="" class="img-library">
+                    <img src="../public/assets/img/img3.jpg" alt="" class="img-library">
+                        </div>
+                    </div>
                 </div>
     </div>
-    <script src="/assets/js/client-library.js">
+    <script src="../public/assets/js/client-library.js">
     </script>
 </body>
 
