handle login logic, handle client post request

--- a/src/views/client-library.html
+++ b/src/views/client-library.html
@@ -17,7 +17,7 @@
                 <div class="header">
                     <div class="item-2">
                         <img src="/assets/img/img2.png" alt="" class="img-school">
-                        <form action="" method="POST" class="form" id="logout-form">
+                        <form action="/api/v1/logout" method="POST" class="form" id="logout-form">
                             <input type="submit" value="Đăng xuất" id="logout" >
                         </form>
                     </div>
